# livraria

./: pyproject.toml
backendLivraria/: admin.py  apps.py  models.py  serializers.py  views.py
backendLivraria/migrations/: 0001_initial.py  0002_alter_categoria_options_alter_editora_options_and_more.py  0003_livro_categoria.py  0004_livro_capa.py  0005_remove_livro_categoria_livro_categoria.py  0006_remove_livro_editora_livro_editora.py
backendLivraria/models/: autor.py  categoria.py  editora.py  init.py  livro.py
backendLivraria/serializers/: autor.py  categoria.py  editora.py  init.py  livro.py
backendLivraria/views/: autor.py  categoria.py  editora.py  init.py  livro.py
config/: settings.py  urls.py
usuario/migrations/: 0001_initial.py
